--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-google-maps": "^9.4.5",
     "react-image-gallery": "^1.0.8",
+    "react-notification-alert": "0.0.13",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
     "react-router": "5.1.2",
