--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.9.3",
     "classnames": "2.2.6",
     "dropzone": "^5.7.2",
+     "headroom.js": "0.11.0",
     "install": "^0.12.2",
     "instantsearch.css": "^7.1.0",
     "less": "2.7.3",
