--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-select": "^3.1.0",
     "react-select2-wrapper": "^1.0.4-beta6",
     "react-step-wizard": "^5.3.5",
+    "react-tagsinput": "^3.19.0",
     "react-to-print": "^2.10.0",
     "reactstrap": "8.4.1",
     "redux": "^4.0.5",
@@ -81,7 +82,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-    "engines": {
+  "engines": {
     "node": "14.x"
   },
   "browserslist": {
