--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@glidejs/glide": "^3.4.1",
+    "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
